# fenrir-project

./: .gitignore  .gitmodules  404.html  CLAUDE.md  LICENSE.md  README.md  book.toml  index.html  print.html  searchindex.js  searchindex.json  title-page.html
.github/workflows/: github-pages.yaml
1_labs/text/: 1_lab.html
1_overview/texts/: intro.html
2_hardware/texts/: 1_3d_print.html  2_custom_pcbs.html  3_modules.html  4_wirings.html  5_bom.html  intro.html
3_assembly/texts/: assembly.html  intro.html
3_software/texts/: 1_rpi_sw.html  2_arduino_fw.html  3_communication.html  intro.html
3d-print/maze/: joint_1.STL  joint_2_180.STL  joint_2_90.STL  joint_3.STL  joint_4.STL  wall.STL
3d-print/robot/: ar_tag_plate.STL  ball_2.STL  battery_mount.STL  camera_mount.STL  lcd_mount.STL  leg_front_2.STL  leg_rear_2.STL  pillar.STL  plate_bot.STL  plate_mid.STL  plate_top.STL  small_battery_mount.STL  srf05_mount.STL  stand.STL  wheel.STL
4_assembly/texts/: assembly.html  intro.html
4_setup/texts/: 1_rpi.html  2_arduino.html  intro.html
5_setup/texts/: 1_rpi.html  2_arduino.html  intro.html
chapter_1/text/: assembly.html  intro.html
chapter_2/text/: 1_rpi.html  2_arduino.html  assembly.html  intro.html
docker/sim/: Dockerfile
drawings/: overview.drawio  power-supply.drawio  wiring.drawio
pcbs/: README.md
pcbs/i2c_board/: BPC-PRP-i2c-board.kicad_pcb  BPC-PRP-i2c-board.kicad_pro  BPC-PRP-i2c-board.kicad_sch
pcbs/microcontroller_board/: BPC-PRP-microcontroller.kicad_pcb  BPC-PRP-microcontroller.kicad_pro  BPC-PRP-microcontroller.kicad_sch
simulation/: README.md  package.xml  setup.cfg  setup.py
simulation/config/: ros_gz_bridge.yaml
simulation/description/: fenrir.urdf.xacro
simulation/examples/: corridor_follower.py  led_monitor.py  line_follower.py  rainbow_leds.py
simulation/fenrir_sim/: button_bridge.py  encoder_bridge.py  lidar_bridge.py  line_sensor_bridge.py  motor_bridge.py  rgb_leds_bridge.py  ultrasound_bridge.py
simulation/launch/: corridor.launch.py  line.launch.py  maze.launch.py
simulation/plugins/: CMakeLists.txt  LedMaterialColor.cc
simulation/worlds/: corridor_double_loop.sdf  corridor_loop.sdf  corridor_straight.sdf  empty.sdf  line.sdf  maze.sdf
software/raspberry_pi/ros2_ws/src/camera_handler_cpp/: CMakeLists.txt
software/raspberry_pi/ros2_ws/src/camera_handler_cpp/include/camera_handler_cpp/: CameraHandler.hpp
software/raspberry_pi/ros2_ws/src/camera_handler_cpp/src/: main.cpp
src/: SUMMARY.md  title-page.md
(+47 files in other folders)
