<?xml version="1.0"?>
<package format="3">
  <name>fenrir_sim</name>
  <version>0.1.0</version>
  <description>
    Phase 4 simulation package for Fenrir: URDF, worlds, launch files,
    ros_gz_bridge configuration, and the motor_bridge node that maps the
    /bpc_prp_robot/* topic contract onto Gazebo Harmonic's standard topics.
  </description>
  <maintainer email="adam.ligocki@vut.cz">Adam Ligocki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
